tests/golden/defaults/defaults/defaults/rabbitmq-operator/operator/rabbitmq-operator/templates/messaging-topology-operator/clusterrolebinding.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: defaults-messaging-topology-manager-rolebinding
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: defaults-messaging-topology-manager-role
subjects:
  - kind: ServiceAccount
    name: messaging-topology-operator
    namespace: my-rabbitmq
