tests/golden/defaults/defaults/defaults/rabbitmq-operator/operator/rabbitmq-operator/templates/messaging-topology-operator/rolebinding.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: messaging-topology-leader-election-rolebinding
  namespace: my-rabbitmq
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: Role
  name: messaging-topology-leader-election-role
subjects:
  - kind: ServiceAccount
    name: messaging-topology-operator
    namespace: my-rabbitmq
