tests/golden/defaults/defaults/defaults/rabbitmq-operator/operator/rabbitmq-operator/templates/messaging-topology-operator/service-account.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: messaging-topology-operator
  namespace: my-rabbitmq
